fuse-Enrichment-Sample/Enrichment-Producer/target/classes/META-INF/fabric8/openshift/enrichment-producer-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/iconUrl: img/icons/camel.svg
    fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=Enrichment-Producer&var-version=1.0
  labels:
    app: Enrichment-Producer
    provider: fabric8
    version: "1.0"
    group: org.mycompany
  name: enrichment-producer
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: Enrichment-Producer
    provider: fabric8
    group: org.mycompany
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/camel.svg
        fabric8.io/metrics-path: dashboard/file/camel-routes.json/?var-project=Enrichment-Producer&var-version=1.0
      labels:
        app: Enrichment-Producer
        provider: fabric8
        version: "1.0"
        group: org.mycompany
    spec:
      containers:
      - env:
        - name: SPRING_APPLICATION_JSON
          value: '{"server":{"tomcat":{"max-threads":1}}}'
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: mycompany/enrichment-producer:1.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 180
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 10
        resources:
          limits:
            cpu: "1.0"
          requests:
            cpu: "0.2"
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
